# weechat

./: .gitignore  AUTHORS.asciidoc  CMakeLists.txt
cmake/: FindGHC.cmake
src/plugins/: CMakeLists.txt
src/plugins/haskell/: API.hs  CMakeLists.txt  HsFFI.h  Weechat.hs  WeechatHaskell.hs  example.hs  weechat-api.cabal  weechat-haskell-api.c  weechat-haskell.c  weechat-haskell.h
src/plugins/script/: script.c  script.h
